--- a/README
+++ b/README
@@ -4,11 +4,12 @@ NAME
 SYNOPSIS
       # During the development
       > carton install Plack
-      > git commit -m "add Plack" carton.json
+      > carton install Starman
+      > git commit -m "add Plack and Starman" carton.json
 
       # Then elsewhere (on a deployment machine)
       > carton install
-      > carton exec myscript.pl arg1 arg2
+      > carton exec starman -p 8080
 
 WARNING
     This software is under the heavy development and considered alpha
