--- a/README
+++ b/README
@@ -3,67 +3,67 @@ NAME
 
 SYNOPSIS
       # During the development
-      > carton install Plack
-      > carton install Starman
-      > git commit -m "add Plack and Starman" carton.json
+      > vim Makefile.PL
+      > carton install
+      > git commit -m "add Plack and Starman" Makefile.PL carton.json
 
       # Then elsewhere (on a deployment machine)
       > carton install
-      > carton exec starman -p 8080
+      > carton exec starman -p 8080 myapp.psgi
 
 WARNING
-    This software is under the heavy development and considered alpha
-    quality till the version hits v1.0.0. Things might be broken, and APIs
-    will be likely to change. You have been warned.
+    This software is under the heavy development and considered ALPHA
+    quality till the version hits v1.0.0. Things might be broken, not all
+    features have been implemented, and APIs will be likely to change. YOU
+    HAVE BEEN WARNED.
 
 DESCRIPTION
     carton is a command line tool to track the Perl module dependencies for
     your Perl application.
 
 TUTORIAL
-  Initializing your carton environment
-    First, you have to initialize your carton environment.
+  Initializing the environment
+    carton will use ".carton" folder for local configuration and "extlib" to
+    install modules. You're recommended to exclude these directories from
+    the version control system.
 
-      > cd ~/devel/MyApp
-      > carton init
+      > carton check
+      > echo .carton >> .gitignore
       > echo extlib >> .gitignore
-      > git add .gitignore carton.json
-      > git commit -m "initialized carton"
-
-    This will create an empty extlib directory and "carton.json" to start
-    tracking your dependencies.
+      > git add carton.json
+      > git commit -m "Start using carton"
 
   Tracking the dependencies
-    You have two options to add and track your dependencies.
-
-    First is just install dependencies to your application as you go.
-
-      > carton install Plack
-      > carton install AnyEvent::Redis
-
-    Second is to manage it via the standard "Makefile.PL" or "Build.PL".
+    You can manage the dependencies of your application via the standard
+    "Makefile.PL" or "Build.PL".
 
       # Makefile.PL
       use inc::Module::Install;
-      name 'MyApp';
-      requires 'DBD::mysql';
-      requires 'HTTP::Message', 5.800;
+      name 'MyAwesomeApp';
+      requires 'Plack', 0.9980;
+      requires 'Starman', 0.2000;
       WriteAll;
 
     And then you can install these dependencies via:
 
       > carton install
 
-    In either way, the modules are installed into your "extlib" directory
-    with the history information and "carton.json" in your directory is
-    updated.
+    The modules are installed into your "extlib" directory, and the
+    dependencies tree and version information are analyzed and saved into
+    "carton.json" in your directory.
 
     Make sure you add "carton.json" to your version controlled repository
     and commit changes as you update dependencies.
 
+      > git commit -m "Added Plack and Starman" Makefile.PL carton.json
+
+    You'll alternatively be able to install modules from the command line,
+    without managing the build file at all.
+
   Deploying your application
     Once you've done installing all the dependencies, you can push your
-    application directory to a remote machine and run the following:
+    application directory to a remote machine (excluding "extlib" and
+    ".carton") and run the following command:
 
       > carton install
 
