--- a/README
+++ b/README
@@ -90,7 +90,7 @@ AUTHOR
     Tatsuhiko Miyagawa
 
 COPYRIGHT
-    Tstsuhiko Miyagawa 2011-
+    Tatsuhiko Miyagawa 2011-
 
 LICENSE
     This software is licensed under the same terms as Perl itself.
