--- a/README
+++ b/README
@@ -3,7 +3,12 @@ NAME
 
 SYNOPSIS
       # During the development
-      > vim Makefile.PL
+      > $EDITOR Makefile.PL
+      ...
+      requires 'Plack', 0.9980;
+      requires 'Starman', 0.2000;
+      ...
+    
       > carton install
       > git commit -m "add Plack and Starman" Makefile.PL carton.json
 
