--- a/README
+++ b/README
@@ -10,7 +10,7 @@ SYNOPSIS
       ...
   
       > carton install
-      > git commit -m "add Plack and Starman" Makefile.PL carton.json
+      > git commit -m "add Plack and Starman" Makefile.PL carton.lock
 
       # Then elsewhere (on a deployment machine)
       > carton install
@@ -35,7 +35,7 @@ TUTORIAL
       > carton check
       > echo .carton >> .gitignore
       > echo local/ >> .gitignore
-      > git add carton.json
+      > git add carton.lock
       > git commit -m "Start using carton"
 
   Tracking the dependencies
@@ -55,12 +55,12 @@ TUTORIAL
 
     The modules are installed into your "local" directory, and the
     dependencies tree and version information are analyzed and saved into
-    "carton.json" in your directory.
+    "carton.lock" in your directory.
 
-    Make sure you add "carton.json" to your version controlled repository
+    Make sure you add "carton.lock" to your version controlled repository
     and commit changes as you update dependencies.
 
-      > git commit -m "Added Plack and Starman" Makefile.PL carton.json
+      > git commit -m "Added Plack and Starman" Makefile.PL carton.lock
 
     You'll alternatively be able to install modules from the command line,
     without managing the build file at all.
@@ -72,7 +72,7 @@ TUTORIAL
 
       > carton install
 
-    This will look at the "carton.json" and install the exact same versions
+    This will look at the "carton.lock" and install the exact same versions
     of the dependencies into "local", and now your application is ready to
     run.
 
