--- a/TODO
+++ b/TODO
@@ -1,11 +1,10 @@
 # 1.0
-support CPAN distro only
 carton config / .carton/config
 -g, --global + local::lib (~/perl5)
 exec
-cpanm Module@Version
 
 # 1.1
+unit tests
 carton update
 clean uninstall?
 carton bundle
@@ -17,3 +16,6 @@ dzil support
 
 # 1.3
 perlrocks multiple versions
+
+# 1.4
+At some point I have to stop patching cpanm to add more options/commands and re-implement its guts inside Carton
