--- a/lib/Carton/Doc/Carton.pod
+++ b/lib/Carton/Doc/Carton.pod
@@ -5,17 +5,21 @@ carton - Perl module dependency manager (aka Bundler for Perl)
 =head1 SYNOPSIS
 
   # During the development
-  > $EDITOR Makefile.PL
-  ...
+  > cat Makefile.PL
+  use inc::Module::Install;
+  name 'MyApp';
+  version '1.0';
+  
   requires 'Plack', 0.9980;
   requires 'Starman', 0.2000;
-  ...
+  
+  WriteAll;
   
   > carton install
   > git commit -m "add Plack and Starman" Makefile.PL carton.lock
 
   # Then elsewhere (on a deployment machine)
-  > carton install
+  > carton install --deployment
   > carton exec starman -p 8080 myapp.psgi
 
 =head1 WARNING
@@ -69,8 +73,14 @@ repository and commit changes as you update dependencies.
 
   > git commit -m "Added Plack and Starman" Makefile.PL carton.lock
 
-You'll alternatively be able to install modules from the command line,
+You can aternatively install modules adhoc from the command line,
 without managing the build file at all.
+
+  > carton install Devel::NYTProf
+  > carton install AnyEvent::Redis
+
+carton will install these modules into C<local> directory in the same
+way, and also can track and analyze the dependencies.
 
 =head2 Deploying your application
 
