--- a/lib/Carton/Doc/Carton.pod
+++ b/lib/Carton/Doc/Carton.pod
@@ -43,7 +43,7 @@ C<local> to install modules. You're recommended to exclude these
 directories from the version control system.
 
   > carton check
-  > echo .carton >> .gitignore
+  > echo .carton/ >> .gitignore
   > echo local/ >> .gitignore
   > git add carton.lock
   > git commit -m "Start using carton"
