use the package name for Doc:: and auto generates pod2man doc files

--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 NAME
-    carton - Perl module dependency manager (aka Bundler for Perl)
+    Carton::Doc::Carton - Perl module dependency manager (aka Bundler for
+    Perl)
 
 SYNOPSIS
       # During the development
