--- a/lib/Carton/Doc/Carton.pod
+++ b/lib/Carton/Doc/Carton.pod
@@ -1,6 +1,6 @@
 =head1 NAME
 
-carton - Perl module dependency manager (aka Bundler for Perl)
+Carton::Doc::Carton - Perl module dependency manager (aka Bundler for Perl)
 
 =head1 SYNOPSIS
 
