move Carton.pod to lib

--- a/README
+++ b/README
@@ -1,6 +1,5 @@
 NAME
-    Carton::Doc::Carton - Perl module dependency manager (aka Bundler for
-    Perl)
+    Carton - Perl module dependency manager (aka Bundler for Perl)
 
 SYNOPSIS
       # During the development
