Checking in changes prior to tagging of version v0.1_0.
Changelog diff is:

diff --git a/Changes b/Changes
index bb48eb3..d5a77f8 100644
--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
 Revision history for Perl extension App::carton

-0.01  Fri Jun 10 19:27:39 2011
+v0.1_0  Sun Jun 26 11:03:50 PDT 2011
         - original version

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
 Revision history for Perl extension App::carton
 
-0.01  Fri Jun 10 19:27:39 2011
+v0.1_0  Sun Jun 26 11:03:50 PDT 2011
         - original version
