--- a/lib/Carton.pod
+++ b/lib/Carton.pod
@@ -38,9 +38,9 @@ for your Perl application.
 
 =head2 Initializing the environment
 
-carton will use C<.carton> folder for local configuration and
-C<local> to install modules. You're recommended to exclude these
-directories from the version control system.
+carton will use the I<.carton> directory for local configuration and
+the I<local> directory to install modules into. You're recommended to
+exclude these directories from the version control system.
 
   > carton check
   > echo .carton/ >> .gitignore
@@ -51,7 +51,7 @@ directories from the version control system.
 =head2 Tracking the dependencies
 
 You can manage the dependencies of your application via the standard
-C<Makefile.PL> or C<Build.PL>.
+I<Makefile.PL> or I<Build.PL>.
 
   # Makefile.PL
   use inc::Module::Install;
@@ -64,11 +64,11 @@ And then you can install these dependencies via:
 
   > carton install
 
-The modules are installed into your C<local> directory, and the
+The modules are installed into your I<local> directory, and the
 dependencies tree and version information are analyzed and saved into
-C<carton.lock> in your directory.
+I<carton.lock> in your directory.
 
-Make sure you add C<carton.lock> to your version controlled
+Make sure you add I<carton.lock> to your version controlled
 repository and commit changes as you update dependencies.
 
   > git commit -m "Added Plack and Starman" Makefile.PL carton.lock
@@ -79,19 +79,19 @@ without managing the build file at all.
   > carton install Devel::NYTProf
   > carton install AnyEvent::Redis
 
-carton will install these modules into C<local> directory in the same
+carton will install these modules into I<local> directory in the same
 way, and also can track and analyze the dependencies.
 
 =head2 Deploying your application
 
 Once you've done installing all the dependencies, you can push your
-application directory to a remote machine (excluding C<local> and
-C<.carton>) and run the following command:
+application directory to a remote machine (excluding I<local> and
+I<.carton>) and run the following command:
 
   > carton install
 
-This will look at the C<carton.lock> and install the exact same
-versions of the dependencies into C<local>, and now your application
+This will look at the I<carton.lock> and install the exact same
+versions of the dependencies into I<local>, and now your application
 is ready to run.
 
 =head2 Bundling modules
@@ -102,7 +102,7 @@ available on CPAN, such as internal distribution aka DarkPAN.
 
   > carton bundle
 
-will bundle these tarballs into C<local/cache> directory, and
+will bundle these tarballs into I<local/cache> directory, and
 
   > carton install --cached
 
