--- a/lib/Carton/Doc/FAQ.pod
+++ b/lib/Carton/Doc/FAQ.pod
@@ -44,7 +44,7 @@ development mode and deployment mode.
 Carton automatically maintains the L<carton.lock> file, which is meant
 to be version controlled, inside your application directory. You don't
 need a separate database or a directory to maintain tarballs outside
-your application. The C<carton.lock> file can always be generated out
+your application. The I<carton.lock> file can always be generated out
 of the local library path, and carton can reproduce the tree using the
 lock file on other machines.
 
