--- a/lib/Carton.pod
+++ b/lib/Carton.pod
@@ -4,7 +4,7 @@ Carton - Perl module dependency manager (aka Bundler for Perl)
 
 =head1 SYNOPSIS
 
-  # During the development
+  # On your development environment
   > cat Makefile.PL
   use inc::Module::Install;
   name 'MyApp';
@@ -14,12 +14,13 @@ Carton - Perl module dependency manager (aka Bundler for Perl)
   requires 'Starman', 0.2000;
   
   WriteAll;
-  
-  > carton install
-  > git commit -m "add Plack and Starman" Makefile.PL carton.lock
 
-  # Then elsewhere (on a deployment machine)
-  > carton install --deployment
+  > carton install
+  > git add Makefile.PL carton.lock
+  > git commit -m "add Plack and Starman"
+
+  # Other developer's machine, or on a deployment box
+  > carton install
   > carton exec starman -p 8080 myapp.psgi
 
 =head1 WARNING
@@ -68,10 +69,13 @@ The modules are installed into your I<local> directory, and the
 dependencies tree and version information are analyzed and saved into
 I<carton.lock> in your directory.
 
-Make sure you add I<carton.lock> to your version controlled
-repository and commit changes as you update dependencies.
+Make sure you add I<carton.lock> to your version controlled repository
+and commit changes as you update dependencies. This will ensure that
+other developers on your app, as well as your deployment environment,
+use exactly the same versions of the modules you just installed.
 
-  > git commit -m "Added Plack and Starman" Makefile.PL carton.lock
+  > git add Makefile.PL carton.lock
+  > git commit -m "Added Plack and Starman"
 
 You can aternatively install modules adhoc from the command line,
 without managing the build file at all.
