--- a/README
+++ b/README
@@ -29,7 +29,10 @@ WARNING
 
 DESCRIPTION
     carton is a command line tool to track the Perl module dependencies for
-    your Perl application.
+    your Perl application. The managed dependencies are tracked in a
+    *carton.lock* file, which is meant to be version controlled, and the
+    lock file allows other developers of your application will have the
+    exact same versions of the modules.
 
 TUTORIAL
   Initializing the environment
