--- a/lib/Carton.pod
+++ b/lib/Carton.pod
@@ -33,7 +33,10 @@ HAVE BEEN WARNED.>
 =head1 DESCRIPTION
 
 carton is a command line tool to track the Perl module dependencies
-for your Perl application.
+for your Perl application. The managed dependencies are tracked in a
+I<carton.lock> file, which is meant to be version controlled, and the
+lock file allows other developers of your application will have the
+exact same versions of the modules.
 
 =head1 TUTORIAL
 
