Do not display warnings if one of the deps are not found in lock
This happens if you have 'URI' in build file and then install LWP
ad-hoc. URI is removed from the %pool so the tree is incomplete. In
this case simply ignore the modules that are not found.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 # 1.0
+Fix non-intuitive errors when Makefile.PL is not valid (in showdeps)
 carton config / .carton/config
 carton update
 clean uninstall?
