remove the mentions to App::carton

--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-Revision history for Perl extension App::carton
+Revision history for carton
 
 v0.1_0  Sun Jun 26 11:03:50 PDT 2011
         - original version
