Checking in changes prior to tagging of version v0.9.0.
Changelog diff is:

diff --git a/Changes b/Changes
index 01fbc68..60b89df 100644
--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for carton

+v0.9.0  Fri Oct 14 01:27:02 JST 2011
+        - Initial non-dev release. Still considered beta before it hits 1.0.0!
+
 v0.1_0  Sun Jun 26 11:03:50 PDT 2011
         - original version

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for carton
 
+v0.9.0  Fri Oct 14 01:27:02 JST 2011
+        - Initial non-dev release. Still considered beta before it hits 1.0.0!
+
 v0.1_0  Sun Jun 26 11:03:50 PDT 2011
         - original version
