--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for carton
 
+v0.9.5  Thu Apr 12 19:39:19 JST 2012
+        - Added experimental cpanfile support
+        - Fixed POD (yanick)
+
 v0.9.4  Sat Mar 31 13:49:41 CEST 2012
         - use Capture::Tiny to capture output (wchristian)
         - Improve synopsis for exec (dagolden)
