Checking in changes prior to tagging of version v0.9_5.
Changelog diff is:

diff --git a/Changes b/Changes
index 2e8b246..e6ba189 100644
--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for carton

-v0.9.5  Thu Apr 12 19:39:19 JST 2012
+v0.9_5  Thu Apr 12 19:39:19 JST 2012
         - Added experimental cpanfile support
         - Fixed POD (yanick)

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for carton
 
-v0.9.5  Thu Apr 12 19:39:19 JST 2012
+v0.9_5  Thu Apr 12 19:39:19 JST 2012
         - Added experimental cpanfile support
         - Fixed POD (yanick)
 
