--- a/lib/Carton/Doc/Check.pod
+++ b/lib/Carton/Doc/Check.pod
@@ -8,13 +8,13 @@ Carton::Doc::Check - Check if your cpanfile and local environment are in sync
 
 =head1 DESCRIPTION
 
-This command checks the consisntency between yoru cpanfile and the
-local environment.
+This command checks the consistency between your cpanfile and the local 
+environment.
 
 =head2 MISSING MODULES
 
-If one of the modules specified in your I<cpanfile> are not found in
-your local environment, C<carton check> will warn you about this:
+If one of the modules specified in your I<cpanfile> is not found in your local 
+environment, C<carton check> will warn you about this:
 
   $ carton check
   Following dependencies are not satisfied. Run `carton install` to install them.
@@ -33,9 +33,7 @@ this:
   CGI.pm-3.55
     FCGI-0.73
 
-This means you probably installed this module in an ad-hoc mode so you
-have to add it to I<cpanfile>, or you originally declared the
-dependencies but found out that you don't need it, so deleted from
-your I<cpanfile>. In that case you can uninstall the module with the
-L<uninstall|Plack::Doc::Uninstall> command.
-
+This means you probably installed this module in an ad-hoc mode so you have to 
+add it to I<cpanfile>, or you originally declared the dependencies but found out 
+that you don't need it, and deleted it from your I<cpanfile>. In that case you 
+can uninstall the module with the L<uninstall|Plack::Doc::Uninstall> command.
