convert to Milla

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for carton
 
+{{$NEXT}}
+
 v0.9.10 Tue Feb 26 13:32:34 PST 2013
         - Same as v0.9_9. Still considered pre-1.0!
 
