--- a/lib/Carton/Doc/Bundle.pod
+++ b/lib/Carton/Doc/Bundle.pod
@@ -8,10 +8,16 @@ Carton::Doc::Bundle - Bundle cached tarballs in vendor/cache
 
 =head1 DESCRIPTION
 
-This command bundles cached tarballs into C<vendor/cache>
-directory. These tarballs have been cached in C<local/cache> while
-resolving dependencies in the snapshot file.snapshot.
+This command bundles cached tarballs into C<vendor/cache> directory,
+so you can deploy on a host without an internet access to CPAN
+mirrors.
 
 Bundled modules can be committed to a version control system, or
 transferred to another host with scp/rsync etc. to use with C<carton
 install --cached>.
+
+This command also creates an experimental fatpacked executable
+C<carton> file in C<vendor/bin> directory, to bootstrap the carton
+install process on a host without Carton installed. This is considered
+experimental, and can be turned off with C<--no-fatpack> option.
+
