--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for carton
 
 {{$NEXT}}
+        - Disable fatpack generation in carton bundle by default. Use the new standalone
+          command carton fatpack, to generate vendor/bin/carton
 
 v1.0.19  2015-05-01 17:48:06 PDT
         - Remove Module::Build and MakeMaker from prerequisite since cpanm will
