--- a/lib/Carton/Doc/Bundle.pod
+++ b/lib/Carton/Doc/Bundle.pod
@@ -13,8 +13,10 @@ directory. These tarballs have been cached in C<local/cache> while
 resolving dependencies in the snapshot file.snapshot.
 
 Bundled modules can be committed to a version control system, or
-transferred to another host with scp/rsync etc. to use with C<carton
-install --cached>.
+transferred to another host with scp/rsync etc. to install with either
+C<carton install --cached>, or a plain cpanm command with:
+
+  cpanm --from file://$PWD/vendor/cache -L local --installdeps .
 
 See also C<carton fatpack> that generates C<carton> executable in
 C<vendor/bin>.
